src/wizard/_wizard.scss
$wizard-nav-step-color: #ccc;
$wizard-nav-step-color-active: #0099cc;
$wizard-nav-step-color-visited: #88cbe0;
$wizard-nav-step-size: 28px;
$wizard-nav-font-size: 14px;
$wizard-step-width: 114px;
$wizard-step-count-max: 5;

.modal {

  .wizard-steps {
    width: $wizard-step-width * $wizard-step-count-max;
    background-color: #f3f3f3;

    ul, li {
      padding:0;
      margin:0;
      list-style:none;
    }
    ul {
      text-align: center;
      margin: 10px 0;
      position:relative;
    }

    li {
      display: inline-block;
      margin: 0 39px;
      text-align: center;
      color: $wizard-nav-step-color;

      div {
        width: $wizard-nav-step-size;
        height: $wizard-nav-step-size;
        border-radius: 50%;
        border: 1px solid $wizard-nav-step-color;

        line-height: $wizard-nav-step-size;
        margin: 0 auto;
        font-size: 14px;
      }

      span {
        font-size: 12px;
      }
    }

    li.visited {
      cursor: pointer;

      div {
        border-color: $wizard-nav-step-color-visited;
        color: $wizard-nav-step-color-visited;
      }
      span {
        color: $wizard-nav-step-color-visited;
      }
      &:after {
        background-color: $wizard-nav-step-color-visited;
      }
    }

    li.active {
      div {
        background-color: $wizard-nav-step-color-active;
        border-color: $wizard-nav-step-color-active;
        color: white;
        font-weight: bold;
      }
      span {
        color: $wizard-nav-step-color-active;
        font-weight: bold;
      }
    }

    li.current:after {
      background-color: $wizard-nav-step-color;
    }

    li:after {
      content: " ";
      height: 1px;
      background-color: $wizard-nav-step-color;
      position: absolute;
      width: 86px;
      top: 15px;
      margin-left: -4px;
    }
    li:last-child:after {
      display:none;
    }
  }


  .modal-content {
    & > .modal-footer {
      .button-switch > .button {
        position: relative;

        & .submit-button-spinner {
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
        }

        & span.loading {
          visibility: hidden;
        }
      }
    }
  }
}

